@startuml
skinparam shadowing false
skinparam line type polyline

'left to right direction

    class RegisterVehicleUI {
    }

    class RegisterVehicleController {
        - repositories: Repositories
        - vehicleRepository : VehicleRepository

        + RegisterVehicleController()
        + registerVehicle(VIN: String, brand: String, model: String, type: String, vehiclePlate: String, \ntareWeight: double, grossWeight: double, currentKm: int, registrationDate: LocalDate, acquisitionDate: LocalDate, maintenanceFrequency: int) : Boolean
    }

    class Repositories {
        - instance : Repositories
        - vehicleRepository : VehicleRepository
        - Repositories()
        + getInstance() : Repositories
        + getVehicleRepository() : VehicleRepository
    }

    class VehicleRepository {
        - vehicleList : List<Vehicle>

        + VehicleRepository()
        + getVehicleList () : List<Vehicles>
        + registerVehicle(VIN: String, brand: String, model: String, type: String, vehiclePlate: String, \ntareWeight: double, grossWeight: double, currentKm: int, registrationDate: LocalDate, acquisitionDate: LocalDate, maintenanceFrequency: int) : Boolean
        + addVehicle(vehicle: Vehicle) : void
        + verifyExistingVehicle(VIN: String, VehiclePlate: String) : Boolean
    }

    class Vehicle {
        - VIN : String
        - brand : String
        - model : String
        - type : VehicleType
        - registrationDate: LocalDate
        - vehiclePlate : String
        - tareWeight : double
        - grossWeight : double
        - currentKm : int
        - acquisitionDate : LocalDate
        - maintenanceFrequency : int

        + Vehicle(VIN: String, brand: String, model: String, type: VehicleType, registrationDate: LocalDate vehiclePlate: String, \ntareWeight: double, grossWeight: double, currentKm: int, acquisitionDate: LocalDate, maintenanceFrequency: int)
        + validateVehicle(vehicle: Vehicle) : Boolean
    }

RegisterVehicleUI ..> RegisterVehicleController
RegisterVehicleController ..> Repositories: repositories
Repositories --> Repositories: instance
RegisterVehicleController ..> VehicleRepository: vehicleRepository
Repositories --> "1"VehicleRepository: vehicleRepository
VehicleRepository -->"*" Vehicle: vehicle

@enduml
